# verus_lemma_finder

./: .gitignore  .railwayignore  Dockerfile  Readme.md  fly.toml  nixpacks.json  pyproject.toml  railway.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependabot-auto-merge.yml  release.yml
data/: curve25519-dalek_lemma_index.embeddings.npy  curve25519-dalek_lemma_index.json  vstd_lemma_index.embeddings.npy  vstd_lemma_index.json
demo/: index.html  quickstart.md  server.py  start_demo.sh
docs/: api.md  configuration.md  deployment_lessons.md  install.md  lemma-search-design.md  rust-parser.md  search-tips.md  testing.md  usage.md  vstd-integration-guide.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: add_index.py  analyze_duplicates.py  count_lemmas.py
src/verus_lemma_finder/: __init__.py  __main__.py  api.py  cli.py  config.py  extraction.py  indexing.py  models.py  normalization.py  scip_utils.py  search.py  utils.py
tests/: conftest.py  run_query_equivalence.py  test_basic_search.py  test_config.py  test_extraction.py  test_normalization.py  test_query_equivalence.py  test_query_normalization.py  test_regression.py  test_utils.py
