[project]
name = "verus-lemma-finder"
version = "1.0.0"
description = "A semantic search tool for discovering Verus lemmas"
readme = "Readme.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Verus Lemma Finder Contributors" }
]
keywords = ["verus", "verification", "lemma", "search", "semantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]
demo = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
verus-lemma-finder = "verus_lemma_finder.cli:main"
lemma-search = "verus_lemma_finder.cli:main"

[project.urls]
Homepage = "https://github.com/verus-lang/verus"
Documentation = "https://github.com/verus-lang/verus"
Repository = "https://github.com/verus-lang/verus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verus_lemma_finder"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Exclude test files from strict type checking initially
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_embeddings: marks tests that require embeddings to pass",
]

[tool.ruff]
# Ruff is a fast Python linter and formatter (can replace black + flake8 + isort)
line-length = 100
target-version = "py312"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Function call in default argument
    "C901",  # Function too complex (we can adjust this later)
    "SIM105", # Use contextlib.suppress (sometimes explicit is clearer)
]

[tool.ruff.format]
# Use ruff as a formatter (replaces black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["verus_lemma_finder"]

