[package]
name = "verus_parser"
version = "0.1.0"
edition = "2021"
description = "Verus specification parser with Python bindings"
license = "MIT"

[lib]
name = "verus_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Verus-aware parser (extends syn)
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing", "extra-traits"] }

# For AST traversal and token handling
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# Serialization (for returning structured data)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# For testing
tempfile = "3.5"

[profile.release]
opt-level = 3
lto = true

